--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend-spotilike",
   "version": "1.0.0",
   "description": "Tinder with music macthes",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-spotilike": "file:..",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
     "process": "^0.11.10",
