--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": " ",
   "scripts": {
-    "install-project-dependencies": "npm install --prefix backend",
-    "start": "npm-run-all start-backend",
+    "install-project-dependencies": "npm-run-all install-backend-dependencies install-frontend-dependencies",
+    "install-backend-dependencies": "npm install --prefix backend",
+    "install-frontend-dependencies": "npm install --prefix frontend",
     "start-backend": "npm run --prefix backend start",
+    "start-frontend": "npm run --prefix frontend start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
